syntax = "proto3";

import "google/protobuf/struct.proto";

service PtyHost {
  rpc CreatePtyProcess(PtyCreate) returns (PtyId) {}
  rpc ExchangeEvents(stream PtyClientEvent) returns (stream PtyServerEvent) {}
  rpc GetCwd(PtyId) returns (PtyCwd) {}
}

message PtyId {
  string id = 1;
}

message PtyCreate {
  string path = 3;
  repeated string args = 4;
  string cwd = 5;
  optional string init_command = 6;
  google.protobuf.Struct env = 7;
}

message PtyClientEvent {
  oneof event {
    PtyEventStart start = 2;
    PtyEventResize resize = 3;
    PtyEventData data = 4;
  }
}

message PtyServerEvent {
  oneof event {
    PtyEventResize resize = 1;
    PtyEventData data = 2;
    PtyEventOpen open = 3;
    PtyEventExit exit = 4;
  }
}

message PtyEventStart {
  uint32 columns = 2;
  uint32 rows = 3;
}

message PtyEventData {
  string message = 2;
}

message PtyEventResize {
  uint32 columns = 2;
  uint32 rows = 3;
}

message PtyEventOpen {}

message PtyEventExit {
  uint32 exit_code = 1;
  optional uint32 signal = 2;
}

message PtyCwd {
  string cwd = 1;
}

